# bugsink-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-04-03-self-update-command-design.md
skills/bugsink-issue-triage/: SKILL.md
skills/bugsink-project-overview/: SKILL.md
skills/bugsink-shared/: SKILL.md
src/: cli.rs  client.rs  config.rs  main.rs  output.rs
src/commands/: auth.rs  describe.rs  events.rs  issues.rs  mod.rs  projects.rs  releases.rs  teams.rs  update.rs
tests/: describe.rs  events.rs  issues.rs  projects.rs  releases.rs  teams.rs  update.rs
