[package]
name = "bugsink"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly CLI for Bugsink error tracking"
license = "MIT"
repository = "https://github.com/bugsink/bugsink-cli"

[[bin]]
name = "bugsink"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
wiremock = "0.6"
